# Compiler

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  compile_commands.json
src/: AST.h  Compiler.c  Compiler.h  Data.c  Data.h  Enum.h  Error.c  Error.h  Flags.c  Flags.h  Function.c  Function.h  GenericList.c  GenericList.h  Graphviz_AST.h  Lexer.c  Lexer.h  Lexer_generated.h  Main.c  Optimizer.c  Optimizer.h  Outfile.c  Outfile.h  Preprocessor.c  Preprocessor.h  Register.c  Register.h  Scope.c  Scope.h  Stack.c  Stack.h  Struct.h  Token.c  Token.h  Type.c  Type.h  Util.c  Util.h  Value.c  Value.h  (+3 more)
src/CodeGeneration/: CG_Binop.c  CG_Binop.h  CG_Expression.c  CG_Expression.h  CG_NativeOP.c  CG_NativeOP.h  CG_Statement.c  CG_Statement.h  CG_UnOp.c  CG_UnOp.h
src/Parser/: P_BinOp.c  P_BinOp.h  P_Expression.c  P_Expression.h  P_Statement.c  P_Statement.h  P_Type.c  P_Type.h  P_UnOp.c  P_UnOp.h
tests/: type.c
util/: GenerateLexer_main.c
